<resources>
    <string name="app_name">VersionFour</string>
    <string name="login">LOGIN</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_attendance">Attendance</string>
    <string name="menu_forums">Forums</string>
    <string name="menu_events">events</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_tt">Time Table</string>
    <string name="menu_questionPaper">Question Paper</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_links">Links</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="erp_id">ERP ID</string>
    <string name="password">PASSWORD</string>
    <string name="title_activity_lay">lay</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="EVENTS">EVENTS</string>
</resources>
