<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/haha"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_forums"
            android:icon="@drawable/forum1"
            android:title="@string/menu_forums" />

        <item
            android:id="@+id/nav_tt"
            android:icon="@drawable/timetable1"
            android:title="@string/menu_tt" />

        <item
            android:id="@+id/nav_maps"
            android:icon="@drawable/maps1"
            android:title="@string/menu_questionPaper" />

        <item
            android:id="@+id/nav_links"
            android:icon="@drawable/links1"
            android:title="@string/menu_links" />

        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/contact1"
            android:title="@string/menu_contact" />

        <item
            android:id="@+id/nav_event"
            android:icon="@drawable/event1"
            android:title="@string/menu_events" />

        <item
            android:id="@+id/nav_attendance"
            android:icon="@drawable/attendance1"
            android:title="@string/menu_attendance" />
    </group>
    <item android:title="TODO">
        <menu>
            <item
                android:id="@+id/log_out"
                android:title="Logout" />
        </menu>
    </item>
</menu>
